--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.ourson</groupId>
-    <artifactId>groovy-examples</artifactId>
+    <artifactId>jenkins-examples</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>Divers exemples autour de Groovy</name>
+    <name>Divers exemples autour de Jenkins</name>
 
     <properties>
         <junit.jupiter.version>5.3.1</junit.jupiter.version>
